# ComfyUI-TempFileCleaner

./: README.md  __init__.py  config.json  pyproject.toml
web/extensions/: temp_file_cleaner.js
