# pyproject.toml
[project]
name = "comfyui-tempfilecleaner" # Unique identifier for your node. Immutable after creation.
description = "Deletes or moves files out of the `temp` directory to improve performance. Highly customizable."
version = "0.0.1" # Custom node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/SparknightLLC/ComfyUI-TempFileCleaner"

[tool.comfy]
PublisherId = "sparknight" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "ComfyUI-TempFileCleaner" # Display name for the Custom Node. Can be changed later.
Icon = "https://example.com/icon.png" # SVG, PNG, JPG or GIF (MAX. 800x400px)